Updated Style.css to show full services section icon, fixed spacing of services section text

--- a/databytes/DBweb/static/css/style.css
+++ b/databytes/DBweb/static/css/style.css
@@ -612,7 +612,7 @@ section {
 }
 .services .icon {
   position: absolute;
-  left: -10px;
+  left: 10px;
   top: calc(50% - 30px);
 }
 .services .icon i {
@@ -621,7 +621,7 @@ section {
   transition: 0.5s;
 }
 .services .title {
-  margin-left: 50px;
+  margin-left: 60px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
@@ -634,7 +634,7 @@ section {
 }
 .services .description {
   font-size: 14px;
-  margin-left: 50px;
+  margin-left: 60px;
   line-height: 24px;
   margin-bottom: 0;
 }
